# pyo-proj-amort42

./: .gitignore  .mypy.ini  Makefile  README.md  pyproject.toml  pytest.ini
.github/workflows/: test.yml
pyo_proj_amort42/: app.py
script/: init-tests
src/pyo_proj_amort42/: app.py
tests/: test_app.py  test_main.py
