[tool.poetry]
name = "pyo-proj-amort42"
version = "0.1.0"
description = ""
authors = ["Shane O'Connell <shaneoconnell@outlook.com>"]
readme = "README.md"
homepage = "https://github.com/amort42/pyo-proj-amort42"
repository = "https://github.com/amort42/pyo-proj-amort42"
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.7"
requests = "^2.31.0"
mypy = "^1.8.0"
flake8 = "^7.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-sugar = "^1.0.0"
pytest-cov = "^4.1.0"


[tool.poetry.group.lint.dependencies]
setuptools = "^69.0.3"
flake8 = "^7.0.0"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"

[tool.coverage.report]
exclude_lines = [
    'if __name__ == "__main__":'
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
